<resources>
    <string name="app_name">KarenHub</string>
    <string name="date">Date:</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="login">LogIn</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="prompt_AccLabel">Account Label</string>
    <string name="signup">SignUp</string>
    <string name="loader">loader</string>
    <string name="go_to_current_location">Go to current location</string>
    <string name="fragment_maps">Set Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>